--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -17,7 +17,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727220.md#1" target="_blank">美5岁女童义卖饼干 帮123名学童缴午餐费用</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727220.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-2763347-150x120.jpg" align ="left"></a>美国加州一名5岁女童将义卖饼干与饮料的所得捐出，帮负担不起营养午餐的学童缴清费用，一共有123名学童因此而免于捱饿。此一善举获得该女童就读学校的褒奖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 1:18 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710360.md#1" target="_blank">天地清明引(139) 东流水－浩然正气4</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710360.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/4325af0fb8983b64fd5334fb52749c7c-150x120.jpg" align ="left"></a>话说纳兰被皇甫急召入宫，郭络罗略述原委。玉林风尘仆仆，不及卸甲弃刃，回禀详情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/6/n11637304.md#1" target="_blank">【三国英雄】之五：曹操首兴义兵（文字版）</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/6/n11637304.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/5-6-150x120.jpg" align ="left"></a>面对汉朝国贼董卓，反董联军却没一个进攻董卓的，面对国难，曹操的选择又是什么？曹操的好朋友，反董联军的盟主袁绍不打董卓，究竟在忙什么呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:50 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726516.md#1" target="_blank">【爸妈必修课】哺喂母乳的烦恼 妈妈被咬怎么办？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726516.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dfa6cb86e45356_ttl7dayo7T_shutterstock_1289756599-150x120.jpg" align ="left"></a>：母乳喂养应注意什么？喂母乳时，宝宝咬奶头怎么办？
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726516.md#1" target="_blank">【爸妈必修课】哺乳的烦恼 妈妈被咬怎么办？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726516.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dfa6cb86e45356_ttl7dayo7T_shutterstock_1289756599-150x120.jpg" align ="left"></a>：母乳喂养应注意什么？喂母乳时，宝宝咬奶头怎么办？
 
 本文刊载于旧金山12月14日教育版
 每周为您献上旧金山最新消息
@@ -27,8 +27,8 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725395.md#1" target="_blank">一个人的圣经</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725395.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_1566000190-150x120.jpg" align ="left"></a>十岁以前的生活对他来说如梦一般，他儿时的生活总像在梦境中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:37 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/5/n11702000.md#1" target="_blank">贫富两兄弟的见证 好心和坏心结异果</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/5/n11702000.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fb029238ecf49b2109c0d439a9c844f0-150x120.jpg" align ="left"></a>古代朝鲜半岛上的故事，心地截然不同的两兄弟，见证了好心和坏心的不同结果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724991.md#1" target="_blank">菲女童以绷带缠脚自制Nike运动鞋 赛跑夺冠</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724991.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1181674094-150x120.jpg" align ="left"></a>菲律宾一名11岁女童以绷带缠脚自制耐吉（Nike）牌运动鞋，并以这双山寨版鞋子赢得赛跑比赛的三项冠军，而她也因此在网上爆红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:18 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/7/12/24/n1952721.md#1" target="_blank">艺术的时空之旅（九）传统油画技法探究（二）</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/7/12/24/n1952721.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Jacques-Louis_David_016-150x120.jpg" align ="left"></a>在意大利画家卡拉瓦乔（公元1571—1610年）之后的很多画家都爱在几乎是黑色的深色底子上提白，导致画家们都不得不被人归为“暗色画派大师”。同时，很多材料、颜色上的原因也致使这些作品在历史上一天比一天更黑，油画变黑得很厉害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:50 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11719885.md#1" target="_blank">庐山山水（下）</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11719885.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/180227015536100093-150x120.jpg" align ="left"></a>“清境”之名，据说是蒋经国有感于此地景致清幽、气候宜人，于是发出赞叹说：“清新空气任君取，境地幽雅是仙居。”而得清境之名。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:09 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/18/n11730550.md#1" target="_blank">五律：情</a><br></h3> 直教从死生，客雁古留声。 尘界神长在，世缘人未明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 10:42 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728493.md#1" target="_blank">新诗：哭泣</a><br></h3> 水经浅滩的呜咽 是河流的哭泣 叶枯寒枝的呜咽 是树木的哭泣 内心深处的呜咽......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 10:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726292.md#1" target="_blank">五绝：灯雪</a><br></h3> 日暮京城冷，纷飞大雪扬。 翩翩灯溢彩，玉落舞芳香。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726245.md#1" target="_blank">五律：愁</a><br></h3> 钟隐托江水，易安沉小舟。 举杯销不尽，挥笔赋难收。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726282.md#1" target="_blank">五绝：玉宇天台</a><br></h3>大雪悠然下，铺天盖地来。 苍茫无尽处，登顶上天台。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:00 PM			</td></tr>
