--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -11,7 +11,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728647.md#1" target="_blank">手工艺术大荟萃 德国圣诞市场上的精品</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728647.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/76ed2d990a39fbaf949cba916f035e7f-150x120.jpg" align ="left"></a>俗话说，会看的看门道。要说德国圣诞市场上值得保存的精品，就属那些精致独特的手工艺品了。今天我们就来稍作盘点，当然一定会挂一漏万，因为德国的手工艺品实在很丰富，我们就先从最著名的木制手工艺生产基地——埃尔茨山区开始介绍吧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:23 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727783.md#1" target="_blank">用1个枕头就能做的燃脂运动！一边看电视一边瘦</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727783.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/pillow-fitness-44-150x120.jpg" align ="left"></a>圣诞节、元旦、农历新年??随着冬季到来，一个又一个的节假日接踵而至。每天辛苦工作，放假最想做的就是躺在沙发上看电视、大啖美食犒赏自己，不过又怕多吃少动会变胖。不妨趁着看电视的时间，用一个枕头做简单的燃脂运动。不用花大钱去健身房、买健身器材，世界健身俱乐部（World Gym）教练Xin教你边看电视就能边瘦身。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:45 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722572.md#1" target="_blank">他从画里跑出来？摄影师苦心守候拍出奇妙佳作</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722572.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/30d201aec61204b1951d0fa2ce955cf0-150x120.jpg" align ="left"></a>游客到美术馆大多是为了欣赏艺术品而来的，但奥地利摄影师斯蒂芬?德拉桑（Stefan Draschan）和别人不一样；他却是为了欣赏 艺术品的游客而来的，他这一系列别有风味的作品，看起来即奇妙又有趣！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:36 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722606.md#1" target="_blank">搭乘全球第一架无塑班机 喝完咖啡也要吃掉咖啡杯</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722606.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5a9fa6784eeb19b61df8f3f6ce447b13-150x120.jpg" align ="left"></a>如果你搭乘纽西兰航空（Air New Zealand），端上来一杯香醇的咖啡时，空服员可能会告诉你，喝完咖啡，可以的话，请一起把咖啡杯吃掉吧！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:11 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722606.md#1" target="_blank">搭乘全球第一架无塑班机 喝完咖啡也要吃掉咖啡杯</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722606.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5a9fa6784eeb19b61df8f3f6ce447b13-150x120.jpg" align ="left"></a>如果你搭乘新西兰航空（Air New Zealand），端上来一杯香醇的咖啡时，空服员可能会告诉你，喝完咖啡，可以的话，请一起把咖啡杯吃掉吧！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728098.md#1" target="_blank">小米香肠：雾台部落的回忆</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728098.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019121_shouhuihsu_rice-roll_01-150x120.jpg" align ="left"></a>杜瑞龙在雾台部落中算是顶尖人物，从他家摆饰的兽骨即可略知一二，他的头饰还有雄鹰的利爪，说起早年徒手抓雄鹰的过程，他还特地穿上原住民服饰，抓着雄鹰留下历史镜头，就怕日后说起这段经历没人愿意相信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:01 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725349.md#1" target="_blank">家族聚会超开心 避免这些尴尬问题破坏气氛</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725349.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/pexels-1b-150x120.jpg" align ="left"></a>我们关心但尊重他人，放轻松却也守分寸，牢记每个人都有自己的见解，这一点很重要。体贴而又鼓舞人心的谈话，能让每一位参与者在家族聚会中拉近彼此的距离，感受温暖和快乐的互动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 3:50 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723296.md#1" target="_blank">油脂原来有4大功效！选好油你需要知道的事</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723296.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/oil-benefit_395365249-150x120.jpg" align ="left"></a>很多人认为油脂热量高、容易胖，有碍心血管健康，且是高血脂的主因；但有时你又听说橄榄油有益心血管健康，鱼油的DHA对大脑和眼睛健康很好?到底油脂是好东西还是坏东西、该不该吃、如何选择？现在，就让我们认识一下油脂这个营养素，学会如何正确看待它吧！油脂有四大功能，油脂包含饱和脂肪酸、不饱和脂肪酸，如ω-3脂肪酸。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:39 PM			</td></tr>
@@ -21,7 +21,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726288.md#1" target="_blank">【胡乃文开讲】熬夜1天需要恢复11天？中医师教你迅速入眠</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726288.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sleep-hunaiwen2-1216-150x120.jpg" align ="left"></a>你知道吗？熬夜一天要用11天才能补足元气。
 
 长期熬夜的人，肝和胆不能得到很好的保养。肝管情绪中的“怒”，所以常常晚睡觉或睡不饱的人，似乎很容易发脾气。肝胆不养好，会连带影响脾胃、肾、心等脏腑的健康。在中医看来，每天晚上要在子时（晚上11点）之前入睡。2味药膳，帮你迅速入睡。睡眠浅、容易醒？4个穴位助你进入深眠......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:30 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726516.md#1" target="_blank">【爸妈必修课】哺乳的烦恼 妈妈被咬怎么办？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726516.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dfa6cb86e45356_ttl7dayo7T_shutterstock_1289756599-150x120.jpg" align ="left"></a>：母乳喂养应注意什么？喂母乳时，宝宝咬奶头怎么办？
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726516.md#1" target="_blank">【爸妈必修课】哺喂母乳的烦恼 妈妈被咬怎么办？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726516.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dfa6cb86e45356_ttl7dayo7T_shutterstock_1289756599-150x120.jpg" align ="left"></a>：母乳喂养应注意什么？喂母乳时，宝宝咬奶头怎么办？
 
 本文刊载于旧金山12月14日教育版
 每周为您献上旧金山最新消息
