--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728888.md#1" target="_blank">赵薇零滤镜大特写曝光 网民直呼看傻眼</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728888.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/zhaowei-huangyoulong-150x120.jpg" align ="left"></a>凭在《还珠格格》中饰演“小燕子”走红的大陆女星赵薇，日前在大陆综艺节目《演员请就位》中亮相时，被拍到零滤镜下尽显疲态的大特写，让网民直呼看傻眼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11729007.md#1" target="_blank">债券多用于抵押融资 楼继伟放风或发特别国债</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11729007.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1312310333481528-600x400-150x120.jpg" align ="left"></a>中共前财政部部长楼继伟日前表示，针对政府债券流动性不足，可以考虑大规模发行特别国债。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728882.md#1" target="_blank">【萧茗看世界】美中协议：美国大赢但有后患</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728882.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1148843006-150x120.jpg" align ="left"></a>大家好，我是萧茗。今天是2019年12月16日。今天我们来分析中美第一阶段贸易协议的意义。虽然和其他人比起来有点迟，但是我们从一个更宏观长远的角度来分析，希望带来一些新意。另外，昨天美国贸易代表和财政部长针对第一阶段的贸易协议，联合出了一个非同寻常的声明，可以说是美国历史上从未见过的，我们也来分析一下这件事。对于还不了解第一阶段贸易协议的观众，我们先简单介绍.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728981.md#1" target="_blank">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728981.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/HKDJY20191218A01_v4_cut-150x120.jpg" align ="left"></a>广东茂名建火葬场事件再爆发激烈冲突。上周，播扬镇民众怀疑政府故伎重施，以建净化水设施为由在当地修建火葬场，引发村民强烈抵制，并发生激烈警民冲突和流血事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 5:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728754.md#1" target="_blank">陆41上市民企变国企 10多家老板被抓或辞职</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728754.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/05/1105202316282431-150x120.jpg" align ="left"></a>今年中国民营企业的生存状况继续恶化，中共“国资系”则以“纾困”为名将私营企业国有化，更大规模地强推“公私合营”，中国民企在这种环境下违约增加、融资困难，生存艰难。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 5:04 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728824.md#1" target="_blank">【新闻看点】专家：2020中国经济或硬着陆</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728824.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/AFP-construction-site-labors-150x120.jpg" align ="left"></a>日前，中共统计局公布了一组好于预期的经济数据，在大陆媒体和亲共媒体间引起一片欢腾，认为中国经济已经出现了“回暖”。然而专家分析，中国经济尚未走出低谷，明年或走向硬着陆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 4:53 AM							</td></tr>
@@ -33,13 +36,10 @@
 该通知书还说，这次的拒签不可以上诉.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:35 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727211.md#1" target="_blank">【拍案惊奇】港澳珠桥上的秘辛 习近平访澳门</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727211.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e10f1e77f9151a_ttl7dayfQ8_bg1216-150x120.jpg" align ="left"></a>上周的节目中，一位出身大陆军人世家的观众kevin给我们留言，讲述了他对香港反送中的认识。最近，他又给我们节目邮箱写信，他首先对我们节目表达支持，说我们是YouTube上质量最高的节目之一，这里谢谢Kevin。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727128.md#1" target="_blank">孙小果涉黑案二审仍判25年 其母获刑20年</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727128.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/15a3384fe6b59efe_ttl7daypku_12-150x120.jpg" align ="left"></a>12月17日，云南昆明恶霸孙小果等13人组织、领导、参加黑社会性质组织等犯罪一案二审维持原判。而孙小果20多年前所犯案，将近期宣判。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:39 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11724254.md#1" target="_blank">艺人杜汶泽寄语：香港的未来属于年轻人</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11724254.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-05_16-24-05-150x120.jpg" align ="left"></a>香港人的民主抗争已逾半年，自从区议会选举民主派大胜之后，有一种观点认为，似乎香港的局势有所缓和。对此，艺人杜汶泽在facebook（fb）藉旺角表行近期发生五宗劫案，提醒港人不要忘记五大诉求，并寄语：“香港的未来属于年轻人。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728228.md#1" target="_blank">助中共官员非法来台 白狼之子旅行社遭搜索</a><br></h3>新北市水资源经济发展协会负责人洪庆淋涉嫌勾结国内20多间非甲种旅行社，伪造文件以专业交流名义申请入台许可，让至少逾5千名中国公务员非法来台；检方17日针对包含统促党总裁“白狼”张安乐之子张玮经营的“华夏大地旅行社”在内的6家旅行社进行第二波搜索。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:35 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727611.md#1" target="_blank">河南许昌公安局副局长彭杰投案被调查</a><br></h3>12月17日，官方通报，许昌市公安局党委委员、副局长、正县级侦查员彭杰涉嫌严重违纪违法，已主动投案，目前正接受调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727202.md#1" target="_blank">浙江矿山塌方2千平方米厂房被埋 3人失踪</a><br></h3>12月17日10时后，浙江省丽水市松阳县新兴镇安露源机制砂有限公司矿山突然塌方，2000余平方米厂房被掩埋，导致3人失踪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:39 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727802.md#1" target="_blank">四川少年在家中自杀 父亲看到其生前漫画崩溃</a><br></h3>12月9日，四川绵阳市三台县芦溪镇广华寺村12岁少年刘少军在家中上吊身亡。在整理儿子遗物时，父亲刘明照被儿子生前所画的一副描绘学生不堪老师暴力而自尽的漫画所震惊。联想到儿子入殓时身上有伤痕，刘明照觉得儿子遭受了校园暴力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727200.md#1" target="_blank">广西禁毒大队前大队长养两情妇及私生子</a><br></h3>广西靖西市公安局禁毒大队原大队长黄毅有两名情妇且婚外生子；并每月向吸毒人员收取“保护费”，充当贩毒人员“保护伞”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727172.md#1" target="_blank">每日三退声明精选（2019/12/16）</a><br></h3>看透中共邪教了。法轮功学员根本就没做错什么啊，就这么对待别人。看到整个共产邪教根本就是想着如何灭掉别人的自由，很邪恶，决定在这里公开退出共匪党团队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727111.md#1" target="_blank">贵州发生煤矿事故 致14人死亡2人被困</a><br></h3>据陆媒报导，12月17日1时30分许，贵州安龙县广隆煤矿发生一起煤与瓦斯突出事故。经初步核实，当班井下作业人员23人，7人安全升井。截至9时，事故造成14人死亡，2人被困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
