--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -21,7 +21,12 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721901.md#1" target="_blank">【名家专栏】美国终于有了正确的对华政策</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721901.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/05-flag--150x120.jpg" align ="left"></a>1947年2月，美国时任总统杜鲁门决定帮助希腊政府反击该国共产党的叛乱。他告诉美国人民，希腊内战是一场测试美国能否抵御国际共产主义的重要考验。杜鲁门声称反共，但他却忽略了世界第一人口大国中更严重的共产主义威胁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 5:59 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721651.md#1" target="_blank">周晓辉：经济困难超想像 北京开药方引鸩止渴</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721651.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1612290157381758-600x400-150x120.jpg" align ="left"></a>而没有得到实惠且无法增强信心的企业和个人，有多少可以放心大胆的消费呢？消费不振的中国市场，靠“铁公基”和房地产还能持续多久？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 4:46 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721707.md#1" target="_blank">陈思敏：中共“六稳”就业最不稳</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/334780_medium-150x120.jpg" align ="left"></a>中共中央经济工作会议12日闭幕，会议设定明年任务最高目标仍是“六稳”，而六稳之首的就业，在这次会后文件中显示，高于其他五稳一共四处被提及，也打破了去年的三提纪录。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:18 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721511.md#1" target="_blank">颜丹：中共搞金钱外交的结局</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-613191992-600x400-150x120.jpg" align ="left"></a>中共在外交上一败涂地，说到底，与其对金钱的认知有极大关联。中共惟利是图，为了利益不折手段，就以为所有人都跟它一样。金钱能收买人心，但却很难臣服人心。能臣服人心的惟有德与善。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 12:49 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725813.md#1" target="_blank">郑纯清：厦门地铁塌陷吟</a><br></h3>红朝验收半月间，
+厦门地铁涌黄泉。
+万岁红铁江山碎，
+豆渣馅破烂泥滩。
+华夏山寨大门毁，
+地基清理复兴前。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 6:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725637.md#1" target="_blank">袁斌：段子里的中国乱象入木三分</a><br></h3>一部手机丢失了，一群相好惊呆了：不是心疼，是心慌。一个贪官进去了，一帮朋友傻眼了：不是为他，是为己。一个领导艾滋了，一堆妇女乱套了：不是咋治，是咋办？一个情人翻脸了，一批干部想自杀：不是想死，是怕抓！一个老人摔倒了，一个国家纠结了：不是不扶，是不敢。一个校长被捕了，一批校长显形了：不是无能，是无德。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 5:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725621.md#1" target="_blank">云鹤天：世人明真相</a><br></h3>法轮功女学员
 向世人讲真相
