--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -22,12 +22,8 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716835.md#1" target="_blank">王赫：先行调整军级以上军官军衔政策的背后</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716835.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/12/1512140630282039-150x120.jpg" align ="left"></a>12月8日，北京当局印发《关于先行调整军级以上军官军衔晋升有关政策的通知》，称这是“紧前出台”的“重要举措”。似乎为这做注脚，9日，武警部队1人晋升中将警衔、36人晋升少将警衔；10日，陆军6人晋升中将军衔、46人晋升少将军衔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 6:46 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716583.md#1" target="_blank">【唐靖远快评】焚书新闻击中人心中什么恐惧？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716583.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15df636b53addc5b_ttl7day7VO_Tang_BG_1-150x120.jpg" align ="left"></a>甘肃焚书新闻最近两天突然大热，成为华为251事件淡出公众焦点之后的最新热点。这本身就说明这条新闻一定有其更深层的社会原因并且契合了新闻发酵的某种内在轨迹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 5:58 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716756.md#1" target="_blank">张林：新疆集中营会关闭吗？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716756.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1152108739-600x400-150x120.jpg" align ="left"></a>新疆集中营问题由来已久，是中共非法羁押、迫害新疆人的手段，近几年规模急遽扩大，才引起国际社会的重视。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 5:47 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716423.md#1" target="_blank">周晓辉：北京高层安排后路 中国人怎么办？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716423.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1-179-1-150x120.jpg" align ="left"></a>如果中共被上天销毁，那些追随中共并发誓要将生命献给它的党团员，能逃脱厄运吗？再换美元、屯粮也没有用的啊。唯一的办法就是抹去毒誓，退出中共。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:44 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716683.md#1" target="_blank">王友群：台湾2020年总统大选结果会怎样</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716683.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/maxresdefault-600x400-1-150x120.jpg" align ="left"></a>2020年1月11日，是台湾总统大选日。
-
-这是中华民国第7次正、副总统公民直选，采用普通、直接、平等、无记名、单记、相对多数投票制度。
-
-现在，距离大选日还有1个月。民进党候选人是现任总统蔡英文，国民党候选人是高雄市长韩国瑜，亲民党候选人是党主席宋楚瑜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:35 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720355.md#1" target="_blank">程晓容：《时代》2019风云人物为何引争议</a><br></h3>日前，美国《时代》周刊2019年度风云人物的结果招来许多批评，因为入围的香港抗争者群体获得了2700万投票者的30%的选票，远超第二名 4.5%的得票率。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 8:30 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720569.md#1" target="_blank">胥志义：能用剌刀和鞭子强迫人民共产和公有吗？</a><br></h3>中国左派与西方左派并不相同。虽然左派多以代表底层民众利益自居，但西方左派帮助穷人，中国左派则打击富人；西方左派也主张富人多缴税以救济穷人，却不反对富人致富，中国左派则反对富人致富，认为这是穷人穷的原因；西方左派也要借助政府政策帮助穷人（如福利政策），中国左派则鼓吹国家对富人实行专政；西方左派与右派之争只是政策之争，中国.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 7:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720563.md#1" target="_blank">金浴凤：致红朝公知们</a><br></h3>贫则斗兮富则贪，吸血农夫匪魔欢；
 长虺成蛇美帝醒，虮虱相吊妖共寒；
 辜恩负义人心散，一旦脱钩即解散；
