--- a/gb/news2008_2.md
+++ b/gb/news2008_2.md
@@ -26,7 +26,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720034.md#1" target="_blank">澳洲袋鼠打架 两条后腿可腾空飞踢</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-512657552-150x120.jpg" align ="left"></a>袋鼠是澳洲特有的物种，素以强而有力的后腿和跳跃能力见称。而它们的尾巴也有多种功能，不但能起到平衡身体的作用，也能作为进攻与防卫的武器。网上一段短片显示，袋鼠在打架时，可以用尾巴支撑地面，然后用两条后腿腾空飞踢对方。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:06 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720291.md#1" target="_blank">车评：为七人车充电 2019 Chrysler Pacifica Hybrid Ltd</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720291.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019_Chrysler_Pacifica_Hybrid_01-150x120.jpg" align ="left"></a>对于有小孩子的家庭来说，Minivan是可完全发挥它的作用及好处，例如车内空间大、乘客出入方便、滑门开关占用面积小等，使这一类车型拥有一批固定客户。Chrysler的Town &amp; Country及旗下的Dodge Caravan在市场上超过廿年，自1983年至今年11月，售出超过1千5百万辆Minivan，所以.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717931.md#1" target="_blank">假新闻时时在身边 如何才能辨别真假？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717931.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2004/05/405180035450-150x120.jpg" align ="left"></a>“假新闻”（fake news）在英文中又分为两种：“资讯扭曲”（misinformation）和“刻意资讯造假”（disinformation）。细分来讲，前者通常是指现代社交媒体捕风捉影、以讹传讹，不经意中大面积传播错误的资讯。后者则是指有人刻意释出虚假资讯，为了蛊惑人心、达到某种不可告人的目的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:53 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718195.md#1" target="_blank">冬季假期 节庆食品恐成宠物居家安全陷阱</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718195.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-72815346-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" alt="Amsterdam, NETHERLANDS: Queenie the dog is already in the mood for Christmas 13 December 2006 in the VIP dog boutique in Amsterdam. With Christmas approaching, besides houses and streets, dogs can now also be decorated. AFP PHOTO- ANP/ COPYRIGHT EVERT ELZINGA ***NETHERLANDS OUT*** (Photo credit should read EVERT ELZINGA/AFP/Getty Images)" align ="left"></a>在冬季，对家中的宠物来说，可是有许多需要特别留意的危险，才不会让憾事发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:21 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710336.md#1" target="_blank">西澳政府注资1.5亿澳元刺激房市</a><br></h3>作为推动经济的一个部分，西澳政府融资1.5亿澳元用以社会福利房。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 11:08 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710283.md#1" target="_blank">西澳南珀斯塔楼项目终获批</a><br></h3>经过了一年法庭调解与开发方案的修正，本地开发商Sirona Capital拟在南珀斯承建大型公寓项目的开发申请终于获批，日前，开发商开启了楼花预售营销活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 11:07 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710164.md#1" target="_blank">【AUSTPRO珀斯房地产专栏】西澳政府拟推共管物业经理新政 提高行业公信力</a><br></h3>对于日益增加的共管物业，西澳政府有意推行新的政策，以规范管理共管物业的行为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 11:04 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710111.md#1" target="_blank">西澳珀斯天鹅河畔秦姬陵地块再分割获批</a><br></h3>珀斯富人区Peppermint Grove上的“秦姬陵”再度分割出另外三块地皮，成为四个住宅基地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 11:03 PM			</td></tr>
