--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -22,12 +22,12 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/9/n11643229.md#1" target="_blank">福州女子控诉医生失职 撒传单为亡父讨公道</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/9/n11643229.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/aa14e5f80a762a9ff647bb152af49977-150x120.jpg" align ="left"></a>福建福州市的林静怡近期一直在为去世的父亲林辉讨说法。她的父亲在福州市第一医院呼吸内科住院期间感染鲍曼不动杆菌，因医生玩忽职守导致死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月09日 10:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/8/n11641394.md#1" target="_blank">长江中下游现40年来最严重干旱</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/8/n11641394.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/11/311153412938-150x120.jpg" align ="left"></a>7月下旬以来，长江中下游地区出现严重干旱，是近40年来最严重的一次干旱。其中，位于江西省的中国大陆第一大淡水湖鄱阳湖提前出现枯水期，厦门岛内总降水量较常年偏少99.9%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 10:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/6/n11636604.md#1" target="_blank">安徽干旱持续 近30野猪闯中学找水喝？</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/6/n11636604.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/11/311153412938-150x120.jpg" align ="left"></a>七月下旬以来，安徽省持续高温且无降雨，发生严重旱情。近期，安徽马鞍山市含山县，近30头野猪夜闯一中学，导致2人受伤。该校校长认为野猪是因干旱，要下山找水喝。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 2:44 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/21/n11671034.md#1" target="_blank">传北京东城区广渠门中学一学生被刺身亡</a><br></h3>11月21日上午，北京东城区天坛东路上原人才市场附近，广渠门中学一名学生被刺身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 5:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/20/n11667599.md#1" target="_blank">山东煤矿发生安全事故 11人被困</a><br></h3>11月20日5时50分，山东能源肥城矿业集团位于嘉祥县境内的梁宝寺煤矿发生安全事故，造成11人被困，目前救援工作正在进行中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 10:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/19/n11665020.md#1" target="_blank">中国山西煤矿瓦斯爆炸 造成15死9伤</a><br></h3>中国山西省平遥县昨日（18日）下午发生一起煤矿瓦斯爆炸事故，造成15人遇难，9人受伤，搜救已在今日凌晨2时结束，事故原因正在调查中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 10:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/16/n11659848.md#1" target="_blank">浙大学生与男友吵架后遗体在河道内被发现</a><br></h3>11月11日，大陆新浪微博上传出浙江平湖市的“一个单身妈妈的血泪控诉”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 4:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/15/n11657369.md#1" target="_blank">安徽蚌埠5间门面房着火 致5死3伤</a><br></h3>11月15日，中共安徽省应急管理厅网站消息，今天（15日）6时57分许，安徽蚌埠市龙子湖区淮河路车站新村853栋门面房发生火灾，导致5死，1重伤，2人轻伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 1:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/14/n11654973.md#1" target="_blank">在北京确诊两名鼠疫患者 一人病情危重</a><br></h3>近日，两名内蒙古患者在北京被确诊为鼠疫的消息引发广泛关注。《新京报》14日最新报导称，目前一名患者病情危重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 5:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/12/n11651047.md#1" target="_blank">北京确认内蒙古2人染鼠疫</a><br></h3>北京市朝阳区政府12日晚通报，内蒙古锡林郭勒盟苏尼特左旗有2人经诊断为“肺鼠疫”确诊病例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 2:54 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/5/n11634752.md#1" target="_blank">深圳宝安国际机场高架桥线缆起火 浓烟滚滚</a><br></h3>11月5日中午12时左右，深圳宝安国际机场一座高架桥起火，暂时未造成人员伤亡。消防部门称，起火点是高架桥下的线缆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 5:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid280_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid280_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid280_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nhrnni253/djy/blob/master/gb/ncid280_3.md#1<br><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid280_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nhrnni253/djy/blob/master/gb/ncid280_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_3.htm">http://www.epochtimes.com/gb/ncid280_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
